Add container for holding skills imgs

--- a/index.html
+++ b/index.html
@@ -63,35 +63,35 @@
         <div class="wrapper">
             <h2>my skills</h2>
             <div class="container">
-                <div class="snail">
-                    <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
-                    <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
-                    <img  class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
+                <div class="skills-container">
+                    <div class="snail">
+                        <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
+                        <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
+                        <img  class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
+                    </div>
+                    <div class="skill-icon css">
+                        <img src="/assets/images/css-3.png" alt="icon">
+                    </div>
+                    <div class="skill-icon django">
+                        <img src="/assets/images/django.svg" alt="icon">
+                    </div>
+                    <div class="skill-icon github">
+                        <img src="/assets/images/github.png" alt="icon">
+                    </div>
+                    <div class="skill-icon html">
+                        <img src="/assets/images/html-5.png" alt="icon">
+                    </div>
+                    <div class="skill-icon js">
+                        <img src="/assets/images/js.png" alt="icon">
+                    </div>
+                    <div class="skill-icon postgress">
+                        <img src="/assets/images/postgress.png" alt="icon">
+                    </div>
+                    <div class="skill-icon python">
+                        <img src="/assets/images/python.png" alt="icon">
+                    </div>
                 </div>
-                <div class="skill-icon css">
-                    <img src="/assets/images/css-3.png" alt="icon">
-                </div>
-                <div class="skill-icon django">
-                    <img src="/assets/images/django.svg" alt="icon">
-                </div>
-                <div class="skill-icon github">
-                    <img src="/assets/images/github.png" alt="icon">
-                </div>
-                <div class="skill-icon html">
-                    <img src="/assets/images/html-5.png" alt="icon">
-                </div>
-                <div class="skill-icon js">
-                    <img src="/assets/images/js.png" alt="icon">
-                </div>
-                <div class="skill-icon postgress">
-                    <img src="/assets/images/postgress.png" alt="icon">
-                </div>
-                <div class="skill-icon python">
-                    <img src="/assets/images/python.png" alt="icon">
-                </div>
-
             </div>
-
         </div>
     </section>
     <script src="assets/js/navbar.js"></script>
