Add projects section, add favicon

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    
-
-    <title>Portfolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>P O R T F O L I O</title>
 </head>
 
 <body>
@@ -32,9 +37,10 @@
         </label>
         <nav id="sidebar" class="sidebar" role="navigation" aria-labelledby="menuTogglerLabel">
             <ul id="menubar" class="menu" role="menubar" aria-orientation="vertical">
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#home" role="menuitem">Home</a>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#home"
+                        role="menuitem">Home</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#" role="menuitem"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#projects" role="menuitem"
                         tabindex="-1">Portfolio</a>
                 </li>
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#skills" role="menuitem"
@@ -52,8 +58,8 @@
             <img id="monster" class="icon" src="/assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
-                    <p >Hello beautiful people visiting my portfolio website! I am Izabela - Full Stack Developer</p>
-                    <a href="#">check my projects</a>
+                    <p>Hello beautiful people visiting my portfolio website! I am Izabela - Full Stack Developer</p>
+                    <a href="#projects">check out my projects</a>
                 </div>
             </div>
         </main>
@@ -67,7 +73,7 @@
                     <div class="snail">
                         <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
                         <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
-                        <img  class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
+                        <img class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
                     </div>
                     <div class="skill-icon css">
                         <img src="/assets/images/css-3.png" alt="icon">
@@ -89,6 +95,72 @@
                     </div>
                     <div class="skill-icon python">
                         <img src="/assets/images/python.png" alt="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- projects -->
+    <section id="projects" class="section">
+        <h2>my projects</h2>
+        <div class="container">
+            <div class="projects-container">
+                <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="/assets/images/jelly-black-character-with-a-long-arm.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>dog inn</h3>
+                        <a target="_blank" class="live-link" href="https://izabela88.github.io/dog-inn/">live
+                            website</a>
+                        <a target="_blank" class="github-link" href="https://github.com/Izabela88/dog-inn">github</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="/assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>cupandcake</h3>
+                        <a target="_blank" class="live-link" href="https://izabela88.github.io/cupandcake/">live
+                            website</a>
+                        <a target="_blank" class="github-link" href="https://github.com/Izabela88/cupandcake">github</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="/assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>brainstorm quiz</h3>
+                        <a target="_blank" class="live-link" href="https://brainstorm-quiz-game.herokuapp.com/">live
+                            website</a>
+                        <a target="_blank" class="github-link"
+                            href="https://github.com/Izabela88/brainstorm-quiz">github</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="/assets/images/jelly-character-in-baseball-uniform.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>walkers</h3>
+                        <a target="_blank" class="live-link" href="https://walkers88.herokuapp.com/">live website</a>
+                        <a target="_blank" class="github-link"
+                            href="https://github.com/Izabela88/walkers-website">github</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="/assets/images/jelly-red-one-eyed-character.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>norah's ceramics</h3>
+                        <a target="_blank" class="live-link" href="https://norahsceramics.herokuapp.com/">live
+                            website</a>
+                        <a target="_blank" class="github-link"
+                            href="https://github.com/Izabela88/norahs-ceramics">github</a>
                     </div>
                 </div>
             </div>
