--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
                 <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-black-character-with-a-long-arm.png">
+                        <img src="/assets/images/jelly-blue-ball-character.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>mt elevators</h3>
+                        <a target="_blank" class="live-link" href="https://mt-elevators.netlify.app/">live
+                            website</a>
+                        <a target="_blank" class="github-link"
+                            href="https://github.com/Izabela88/mt-elevators">github</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
                     </div>
                     <div class="contentBx">
                         <h3>dog inn</h3>
@@ -130,7 +142,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
+                        <img src="/assets/images/jelly-black-character-with-a-long-arm.png">
                     </div>
                     <div class="contentBx">
                         <h3>brainstorm quiz</h3>
@@ -166,6 +178,21 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>Illustration by <a href="https://icons8.com/illustrations/author/zD2oqC8lLBBA">Icons 8</a> from <a
+                href="https://icons8.com/illustrations">Ouch!</a></p>
+        <p>
+            Izabela Krupinska &copy;
+            <span id="copyright">
+                <script>
+                    document
+                        .getElementById("copyright")
+                        .appendChild(document.createTextNode(new Date().getFullYear()));
+                </script>
+            </span>
+            All Rights Reserved
+        </p>
+    </footer>
     <script src="assets/js/navbar.js"></script>
     <script src="assets/js/parallax.js"></script>
 </body>
