Add social links

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             </ul>
         </nav>
         <main id="home" class="content">
+            <div class="soc-icons">
+                <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img class="soc-link linkedin-link" src="/assets/images/linkedin.svg" alt="linkedin logo"></a>
+                <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-link" src="/assets/images/icons8-github.svg" alt="github logo"></a>
+
+            </div>
             <img id="snail" class="hero-img" src="/assets/images/jelly-yellow-snail-waving-hand.png" alt="snail">
             <img id="sun" class="hero-img-two" src="/assets/images/jelly-yellow-sun-with-rays-2.png" alt="sun">
             <img id="logo" class="logo" src="/assets/images/logo.png" alt="logo">
@@ -181,7 +186,9 @@
     <footer>
         <p>Illustration by <a href="https://icons8.com/illustrations/author/zD2oqC8lLBBA">Icons 8</a> from <a
                 href="https://icons8.com/illustrations">Ouch!</a></p>
-        <p>
+        <p>Social icons by <a href="https://icons8.com/">Icons 8</a></p>
+        <p>Skills icons created by <a href="https://www.flaticon.com/free-icons/html-5" title="html 5 icons">Freepik - Flaticon</a></p>
+        <p class="rights">
             Izabela Krupinska &copy;
             <span id="copyright">
                 <script>
@@ -198,5 +205,3 @@
 </body>
 
 </html>
-
-<!-- html <a href="https://www.flaticon.com/free-icons/html-5" title="html 5 icons">Html 5 icons created by Freepik - Flaticon</a> -->
