Add animation to social icons

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         </nav>
         <main id="home" class="content">
             <div class="soc-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img class="soc-link linkedin-link" src="/assets/images/linkedin.svg" alt="linkedin logo"></a>
-                <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-link" src="/assets/images/icons8-github.svg" alt="github logo"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img
+                        class="soc-link linkedin-link" src="/assets/images/linkedin.svg" alt="linkedin logo"></a>
+                <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-link"
+                        src="/assets/images/icons8-github.svg" alt="github logo"></a>
 
             </div>
             <img id="snail" class="hero-img" src="/assets/images/jelly-yellow-snail-waving-hand.png" alt="snail">
@@ -74,9 +76,9 @@
         <div class="wrapper">
             <h2>my skills</h2>
             <div class="container">
-                <div class="skills-container">
-                    <div class="snail">
-                        <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
+                <div  class="skills-container">
+                    <div id="s-snail" class="snail">
+                        <img  class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
                         <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
                         <img class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
                     </div>
@@ -184,10 +186,11 @@
         </div>
     </section>
     <footer>
-        <p>Illustration by <a href="https://icons8.com/illustrations/author/zD2oqC8lLBBA">Icons 8</a> from <a
-                href="https://icons8.com/illustrations">Ouch!</a></p>
-        <p>Social icons by <a href="https://icons8.com/">Icons 8</a></p>
-        <p>Skills icons created by <a href="https://www.flaticon.com/free-icons/html-5" title="html 5 icons">Freepik - Flaticon</a></p>
+        <p>Illustrations from
+            <a target="_blank" href="https://icons8.com/illustrations/style--jelly">Icons 8 Ouch</a>
+        </p>
+        <p>Social icons from <a target="_blank" href="https://icons8.com/">Icons 8</a></p>
+        <p>Skills icons from <a target="_blank" href="https://www.flaticon.com/">Freepik - Flaticon</a></p>
         <p class="rights">
             Izabela Krupinska &copy;
             <span id="copyright">
