Add about section

--- a/index.html
+++ b/index.html
@@ -37,25 +37,26 @@
         </label>
         <nav id="sidebar" class="sidebar" role="navigation" aria-labelledby="menuTogglerLabel">
             <ul id="menubar" class="menu" role="menubar" aria-orientation="vertical">
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#home"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html"
                         role="menuitem">Home</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#projects" role="menuitem"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#projects" role="menuitem"
                         tabindex="-1">Portfolio</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#skills" role="menuitem"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#skills" role="menuitem"
                         tabindex="-1">Skills</a></li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#" role="menuitem">About</a>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html"
+                        role="menuitem">About</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="#" role="menuitem"
-                        tabindex="-1">Contact</a></li>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html" role="menuitem"
+                        tabindex="-1">Check CV</a></li>
             </ul>
         </nav>
         <main id="home" class="content">
             <div class="soc-icons">
                 <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img
                         class="soc-link linkedin-link" src="/assets/images/linkedin.svg" alt="linkedin logo"></a>
-                <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-link"
+                <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-icon"
                         src="/assets/images/icons8-github.svg" alt="github logo"></a>
 
             </div>
@@ -76,9 +77,9 @@
         <div class="wrapper">
             <h2>my skills</h2>
             <div class="container">
-                <div  class="skills-container">
+                <div class="skills-container">
                     <div id="s-snail" class="snail">
-                        <img  class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
+                        <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
                         <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
                         <img class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
                     </div>
@@ -185,6 +186,7 @@
             </div>
         </div>
     </section>
+
     <footer>
         <p>Illustrations from
             <a target="_blank" href="https://icons8.com/illustrations/style--jelly">Icons 8 Ouch</a>
