Restyle hero text

--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
             <img id="monster" class="icon" src="/assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
-                    <p>Hello beautiful people visiting my portfolio website! I am Izabela - Full Stack Developer</p>
-                    <a href="#projects">check out my projects</a>
+                    <p>Welcome beautiful people visiting my portfolio website! <br> I am Izabela - Full Stack Developer</p>
+                    <div class="main-links">
+
+                        <a href="#projects">my projects</a>
+                        <a href="about.html">about me</a>
+                    </div>
                 </div>
             </div>
         </main>
